# pty-tools

./: README.md  pyproject.toml
src/pty_tools/: cli.py  client.py  common.py  screen.py  server.py
src/pty_tools/cli/: pty_exit.py  pty_interact.py  pty_list.py  pty_read.py  pty_spawn.py  pty_write.py
tests/: test_common.py  test_integration.py  test_screen.py
