[project]
name = "pty-tools"
version = "0.1.0"
description = "PTY management tools for spawning and interacting with terminal processes"
requires-python = ">=3.13"
dependencies = [
    "pexpect>=4.9",
    "pyte>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
pty_spawn = "pty_tools.cli.pty_spawn:main"
pty_write = "pty_tools.cli.pty_write:main"
pty_read = "pty_tools.cli.pty_read:main"
pty_interact = "pty_tools.cli.pty_interact:main"
pty_list = "pty_tools.cli.pty_list:main"
pty_exit = "pty_tools.cli.pty_exit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pty_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
