[project]
name = "pty-tools"
version = "0.1.0"
description = "PTY management tools for spawning and interacting with terminal processes"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
pty = "pty_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pty_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
